--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="menu-icon"><span class="fas fa-bars"></span></div>
       <div class="logo">
       	<a href="Home.html" target="_blank">
-	      	<img src="Image/TechyRodan-headlogo.png">
+	      	<img src="Image/TechyRodan-Headlogo.png" alt="TechyRodan | Techy Tutorial And News, Blogger, Graphic & Web Designer, Tips and Tricks>
 	    </a>
       </div>
       <div class="nav-items">-
