--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
           <br><br><h2 style="text-align: center;color: #93ff00;">Channel Official Trailer</h2><br>
 
           <br><div class="video" style="">
-          	<video controls="" autoplay="" name="media" width="500">
-          		<source src="Channel Official Trailer/Channel Trailer.mp4" type="video/mp4">
-          	</video>
+          	<h2 style="text-align: center;color: #93ff00;">"Coming Soon"</h2>
           </div>
 
         </div>
