--- a/index.html
+++ b/index.html
@@ -109,12 +109,20 @@
           <a href="https://play.google.com/store/search?q=techybuddy&c=appss" target="_blank">
             <img src="Image/Google Play Store badge.png">
           </a>
-          <form class="all-btn" action="https://www.mediafire.com/" target="blank">
+          <form class="all-btn" action="https://www.mediafire.com/file/ysu4ncbhq3rsicj/Techy_Rodan.apk/file" target="blank">
               <button>
                 <i class="fas fa-download"></i>
                 <p>Download APK</p>
               </button>
           </form>
+		
+	  <form class="all-btn" action="Techy Rodan.apk" download>
+              <button>
+                <i class="fas fa-download"></i>
+                <p>Direct Download APK</p>
+              </button>
+          </form>
+					  
         </div>
         <div class="wrapper-content4" id="wrapper-content"></div>
 
