--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 		
 	  <form class="all-btn" action="Techy Rodan.apk" download>
               <button>
-                <i class="fas fa-download"></i>
-                <p>Direct Download APK</p>
+                <p>Direct Download</p>
               </button>
           </form>
 					  
